--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  font-family: Poppins, sans-serif;  
+  
+  --bc-color: #121829;
+  --text-color: #ebeef5;
+  --text-color-main: #ffffff;
+  --main-color: #7B6EF6;
+  --main-color-hover: #4737d3;
+  --text-color-block: #8e95a9;
 }
 
 body {
   margin: 0;
   padding: 0;
+  font-weight: 400;
+  font-size: 16px;
+  background: var(--bc-color);
+
+  color: var(--text-color-main);
 }
