--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,20 @@
   margin: 0 auto;
   padding: 0 10px;
 }
+
+.appBlock{
+  width: 588px;
+  margin: 80px 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.appInput{
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+
+  max-width: 455px;
+}
