--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --input-radius: #323b54;
   --input-text: #475069;
   --header-color: #a8aebf;
+  --favorite-color: #ffad49;
+  --favorite-color-green: #37d8a7;
 }
 
 body {
@@ -18,6 +20,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   background: var(--bc-color);
+  box-sizing: border-box;
 
   color: var(--text-color-main);
 }
