--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,15 +2,47 @@
     font-family: Poppins, sans-serif;
     font-size: 16px;
     line-height: 150%;
-    color: var(--text-color-main);
-    background: var(--main-color);
-    padding: 16px 32px;
-    border-radius: 12px;
-    border: 2px solid var(--main-color);
-    transition: background 1s;
+    
     cursor: pointer;
+    border: none;
+    background: transparent;
+    color: var(--text-color-main);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 }
 
-.button:hover{
+
+.default{
+    background: var(--main-color);
+    border: 2px solid var(--main-color);
+    
+    border-radius: 12px;
+    padding: 16px 32px;
+    transition: background 1s;
+}
+
+.default:hover{
     background: var(--main-color-hover);
+}
+
+.hasIcon{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    
+    gap: 8px;
+
+    font-weight: 600;
+}
+
+.green{
+    color: var(--favorite-color-green);
+}
+
+.purple{
+    color: var(--main-color);
 }
