--- a/src/components/CardFilm/CardFilm.module.css
+++ b/src/components/CardFilm/CardFilm.module.css
@@ -12,21 +12,6 @@
     gap: 24px;
 }
 
-.favorite{
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    display: flex;
-    align-items: center;
-    gap: 4px;
-
-    color: var(--favorite-color);
-
-    backdrop-filter: blur(8px);
-    background: rgba(0, 0, 0, 0.65);
-    border-radius: 8px;
-    padding: 4px 8px;
-}
 
 .image{
     width: 100%;
@@ -38,6 +23,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    padding-left: 8px;
 }
 
 .title{
