--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,16 @@
 
   max-width: 455px;
 }
+
+.block_input{
+  margin: 1rem 0;
+  max-width: 400px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.block_input button{
+  max-width: 200px;
+}
